--- a/ctr/ctr.ipynb
+++ b/ctr/ctr.ipynb
@@ -11,17 +11,12 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import math\n",
     "import category_encoders as ce\n",
     "\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "from sklearn import preprocessing\n",
-    "from catboost import CatBoostClassifier\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, roc_curve, roc_auc_score"
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
