image recommendations update

--- a/image-recommendation-system/rec.ipynb
+++ b/image-recommendation-system/rec.ipynb
@@ -152,9 +152,9 @@
     "    sentence = sentence.strip().lower()\n",
     "    tokens = word_tokenize(sentence)\n",
     "    tokens = [\n",
-    "        lemmatizer.lemmatize(i)\n",
-    "        for i in tokens\n",
-    "        if i not in english_stop_words and i.isalnum()\n",
+    "        lemmatizer.lemmatize(token)\n",
+    "        for token in tokens\n",
+    "        if token not in english_stop_words and token.isalnum()\n",
     "    ]\n",
     "    return \" \".join(tokens)"
    ],
@@ -240,7 +240,7 @@
     "recommendations = recommend_images(query, tfidf_matrix)\n",
     "\n",
     "fig, axs = plt.subplots(len(recommendations), figsize=(30, 30))\n",
-    "print(recommendations)\n",
+    "\n",
     "for i, image_path in enumerate(recommendations):\n",
     "    try:\n",
     "        img = Image.open(\"./Flickr8k_Dataset/Flicker8k_Dataset/\" + image_path.split(\"/\")[-1])\n",
